# DanmakuConvert

./: .gitignore  LICENSE  README-en.md  README-zh.md  README.md  danmaku_array.py  danmaku_convert.py  guard_and_gift.py  pyproject.toml  sample.xml  superchat.py  utils.py
.github/ISSUE_TEMPLATE/: bug_report.md  docs-feedback.md  feature_request.md  help-wanted.md
dmconvert/: __init__.py  cli.py  convert.py  utils.py
dmconvert/guardgift/: gg_handler.py  guard_and_gift.py
dmconvert/header/: __init__.py  header.py
dmconvert/normal/: danmaku_array.py  dytest.py  normal_handler.py
dmconvert/superchat/: superchat.py  superchat_handler.py
