[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dmconvert"
version = "0.0.3"
authors = [
  { name="timerring"},
]
description = "The Python toolkit package and cli designed for converting xml danmaku to ass."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
dmconvert = "dmconvert.cli:cli"

[project.urls]
"Homepage" = "https://github.com/timerring/DanmakuConvert"
